--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,19 @@ plugins {
 	id 'org.springframework.boot' version '2.6.7'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+	id 'jacoco'
 }
+
+jacocoTestCoverageVerification {
+	violationRules {
+		rule {
+			limit {
+				minimum = 0.2
+			}
+		}
+	}
+}
+
 
 group = 'com.ciber8'
 version = '0.0.1-SNAPSHOT'
